# hackathon-2025

./: .gitignore  .gitmodules  APP_FLOW.md  Cargo.toml  PROJECT_SUMMARY.md  README.md  SCREENSHOTS.md  USAGE.md  package-lock.json  package.json  run_demo.sh
booky/: .gitignore  IMPLEMENTATION.md  LICENSE  README.md  manifest.v2.json  manifest.v3.json  package-lock.json  package.json  webpack.config.js
consentky/: MIT.md  README.md
cooky/: README.md  index.html  package-lock.json  package.json  tailwind.config.js
cooky/src/: App.tsx  (+1 more)
geostories-main/: .gitignore  README.md  app.js  cache.js  index.html  package-lock.json  package.json  vite.config.js
homegate/: .gitignore  Makefile  Makefile.dev  Makefile.prod  README.md  docker-compose.dev.yml  docker-compose.prod.yml
p2pjobs/: package-lock.json
pubky-cli/: .gitignore  Cargo.toml  Changes.md  LICENSE  README.md
pubky-cli/.github/workflows/: ci.yml  release.yml
pubky-cli/src/: admin.rs  main.rs  tools.rs  user.rs  util.rs
pubky-cli/tests/: integration.rs
pubky-lab/: .gitignore  DEPLOYMENT.md  LICENSE  QUICKSTART.md  README.md  index.html  package.json  pubkylab.html
pubky-live-vote/: LICENSE  README.md  index.html  package.json  tsconfig.base.json  tsconfig.json  vite.config.ts
pubky-mcp-server/: .gitignore  .npmignore  .oxlintignore  .oxlintrc.json  .prettierignore  AGENTS.MD  ARCHITECTURE_UPDATE.md  LICENSE  QUICKSTART.md  README.md  SETUP.md  cursor-config-example.json  package.json
publar/: .gitignore  ARCHITECTURE.md  Cargo.toml  Dioxus.toml  README.md  SCENARIOS.md  build.rs  package.json
publar/assets/: input.css  tailwind.css
publar/examples/: testnet_write_read.rs
publar/src/: api.rs  force_layout.rs  main.rs  scenario.rs  testnet.rs
publar/src/components/: context_sidebar.rs  mod.rs  network_visualization.rs  topbar.rs
scripts/: authenticator.mjs  pubky-cli-shared.mjs  signup.mjs
src/: create_wiki.rs  edit_wiki.rs  main.rs  utils.rs  view_wiki.rs
wiky/: .gitignore  Cargo.toml  LICENSE  README.md
wiky/.github/workflows/: build-binaries.yml
wiky/doc/: TESTING.md
wiky/src/: create_wiki.rs  edit_wiki.rs  utils.rs
(+202 files in other folders)
