[package]
name = "pubky-wiki"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
eframe = "0.33"
egui = "0.33"
egui_commonmark = "0.22"
image = "0.25"
log = "0.4"
qrcode = "0.14"
pubky = "0.6.0-rc.6"
tokio = { version = "1", features = ["full"] }
tracing-subscriber = "0.3"
uuid = { version = "1", features = ["v4"] }
